--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-ext-replace": "^0.3.0",
     "gulp-front-matter": "^1.3.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-google-spreadsheets": "^1.2.0",
     "gulp-hb": "^5.1.0",
     "gulp-imagemin": "^3.0.3",
     "gulp-load-plugins": "^1.2.4",
