--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.13.2",
     "babel-preset-es2015": "^6.13.2",
+    "babel-register": "^6.18.0",
     "babelify": "^7.3.0",
     "browser-sync": "^2.14.0",
     "browserify": "^13.1.0",
@@ -34,6 +35,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sizereport": "^1.1.3",
     "gulp-sourcemaps": "^1.6.0",
@@ -45,6 +47,7 @@
     "handlebars-layouts": "^3.1.3",
     "helper-markdown": "^0.2.1",
     "imagemin-pngquant": "^5.0.0",
+    "node-notifier": "^4.6.1",
     "postcss-vmin": "^2.0.0",
     "postcss-will-change": "^1.1.0",
     "require-dir": "^0.3.0",
