--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "handlebars-layouts": "^3.1.3",
     "helper-markdown": "^0.2.1",
     "imagemin-pngquant": "^5.0.0",
+    "jquery": "^3.1.1",
     "node-notifier": "^4.6.1",
     "postcss-vmin": "^2.0.0",
     "postcss-will-change": "^1.1.0",
