--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "glob": "^7.0.5",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-cheerio": "^0.6.2",
+    "gulp-exit": "0.0.2",
     "gulp-ext-replace": "^0.3.0",
     "gulp-front-matter": "^1.3.0",
     "gulp-gh-pages": "^0.5.4",
