--- a/package.json
+++ b/package.json
@@ -31,15 +31,17 @@
     "gulp-google-spreadsheets": "^1.2.0",
     "gulp-hb": "^5.1.0",
     "gulp-imagemin": "^3.0.3",
+    "gulp-jsbeautify": "^0.1.1",
+    "gulp-json-editor": "^2.2.1",
     "gulp-load-plugins": "^1.2.4",
     "gulp-newer": "^1.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.1",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sizereport": "^1.1.3",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "^1.0.2",
     "gulp-svgmin": "^1.2.3",
     "gulp-svgstore": "^6.0.0",
     "gulp-uglify": "^2.0.0",
